2014-10-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix perl format.

2014-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/file.c (debug_agets): Fix parsing of comment.

2014-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm (last_use_label): Fix for empty
	  tapelist.

2014-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning.
	* perl/Amanda/Taper/Worker.pm (TAKE_SCRIBE_FROM): Set
	  scribe1->{'cancelled'} to 0.

2014-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Set slot in invalid error.
	* perl/Amanda/Taper/Scan/traditional.pm: Continue on invalid.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (verify): Failure to read the label is not an
	  error.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/amservice.c,
	  server-src/amcheck.c, server-src/dumper.c,
	  server-src/planner.c, perl/Amanda/Util.swg: Call make_crc_table
	* common-src/security-util.c: Compute and print crc32 of each packet if
	  debug_auth >= 6.
	* common-src/util.c (make_crc_table, crc32_init, crc32_add,
	  crc32_finish): New functions to handle crc32.
	* common-src/util.h: prototype the new functions.
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-directtcp.c
	  device-src/xfer-dest-taper-splitter.c
	  server-src/dumper.c
	  server-src/xfer-source-holding.c: compute and print crc32 of the
	  data stream.
	* xfer-src/element-glue.c: Compute crc32 of an element.
	* xfer-src/xfer-element.h (XferElement): Add crc.

2014-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* autogen: automake --add-missing

2014-09-10 Xu Han <xhan@carbonite.com>
	* packaging/rpm/amanda.spec.src: CentOS 7 packaging.

2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>